# newfeatures

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  conanfile.txt
libs/: build_dependencies.cmd  build_dependencies.sh
src/: CMakeLists.txt  main.c
src/gears/: CMakeLists.txt
